--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -27,7 +27,7 @@ $badge-color: #e54724
 
 $primary: #304ca2
 $success: #98c96c
-$info: #7ac3d3
+$info: #289a60
 $warning: #fabd17
 $danger: #dd6583
 
