--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,34 +1,34 @@
 - question = answer.question
 - correct_answer = question.correct_answer
-.report-comment(class="#{answer == answer.question.correct_answer ? "is-correct_answer" : ""}")
-  .report-comment__author
-    = link_to answer.user, itempro: 'url', class: 'report-comment__author-link' do
-      = gravatar_tag answer.user, secure: true, size: 200, html: { class: "report-comment__author-icon"}
-  .report-comment__body
+.thread-comment(class="#{answer == answer.question.correct_answer ? "is-correct_answer" : ""}")
+  .thread-comment__author
+    = link_to answer.user, itempro: 'url', class: 'thread-comment__author-link' do
+      = gravatar_tag answer.user, secure: true, size: 200, html: { class: "thread-comment__author-icon"}
+  .thread-comment__body
     - if answer == correct_answer
       .answer-badge
         .answer-badge__icon
           i.fa.fa-star
         .answer-badge__label
           = t("best_answer_html")
-    header.report-comment__body-header
-      h2.report-comment__login-name
-        = link_to answer.user, itempro: 'url', class: 'report-comment__login-name-link' do
+    header.thread-comment__body-header
+      h2.thread-comment__login-name
+        = link_to answer.user, itempro: 'url', class: 'thread-comment__login-name-link' do
           = answer.user.login_name
-      time.report-comment__created-at(datetime='#{answer.created_at.to_datetime}' pubdate='pubdate')
+      time.thread-comment__created-at(datetime='#{answer.created_at.to_datetime}' pubdate='pubdate')
         = l answer.updated_at, format: :date_long_with_time
-    .report-comments__description.js-markdown-view.js-target-blank.is-long-text-style
+    .thread-comments__description.js-markdown-view.js-target-blank.is-long-text-style
       = answer.description
-    .report-comment__actions
-      ul.report-comment__actions-items
+    .thread-comment__actions
+      ul.thread-comment__actions-items
         - if correct_answer.blank? && answer != correct_answer && current_user == question.user
-          li.report-comment__actions-item
+          li.thread-comment__actions-item
             = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: 'is-button-standard-sm-warning' do
               | 解決にする
         - if answer.user == current_user
-          li.report-comment__actions-item
-            = link_to edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: 'report-comment__actions-item-link' do
+          li.thread-comment__actions-item
+            = link_to edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: 'thread-comment__actions-item-link' do
               i.fa.fa-pencil
-          li.report-comment__actions__item
-            = link_to question_answer_path(answer.question, answer, return_to: question_url(answer.question)), data: { confirm: t('are_you_sure') }, method: :delete, class: 'report-comment__actions-item-link' do
+          li.thread-comment__actions__item
+            = link_to question_answer_path(answer.question, answer, return_to: question_url(answer.question)), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-comment__actions-item-link' do
               i.fa.fa-trash-o
