--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -10,6 +10,6 @@ header.page-header
           | 新規ページ
 .page-body
   .container
-    .page-list
+    .thread-list
       - @pages.each do |page|
         = render 'page_list_item', page: page
