--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -1,7 +1,7 @@
-.report
-  .report__inner
-    header.report__header
-      h1.report__title
+.thread
+  .thread__inner
+    header.thread__header
+      h1.thread__title
         = report.title
         - if @checks.any?
           .stamp.stamp-approve
@@ -11,10 +11,10 @@
               = @checks.last.created_at.strftime('%Y/%m/%d')
             .stamp__content.is-user-name
               = @checks.last.user.login_name
-    .report__meta
-      .report__author-name
+    .thread__meta
+      .thread__author-name
         = report.user.login_name
-      time.report__created-at(datetime="#{report.created_at.to_datetime}" pubdate="pubdate")
+      time.thread__created-at(datetime="#{report.created_at.to_datetime}" pubdate="pubdate")
         = l report.updated_at, format: :date_long_with_time
     - if @report.practices.present?
       .report-practices
@@ -23,27 +23,32 @@
             li.report-practices__item
               = link_to practice, class: 'report-practices__item-link' do
                 = practice.title
-    .report__description.js-target-blank.is-long-text-style.js-markdown-view
+    .thread__description.js-target-blank.is-long-text-style.js-markdown-view
       = report.description
-    footer.report__body-footer
-      .report__body-footer-container
+    - if admin_login?
+      .thread-admin-tools
+        ul.thread-admin-tools__items
+          - if @report.checks.blank?
+            li.thread-admin-tools__item
+              = render 'reports/report_check_form'
+
+    footer.thread__body-footer
+      .thread__body-footer-container
         - if @report.user_id == current_user.id
-          .report__actions
-            ul.report__actions-items
-              li.report__actions-item
-                = link_to edit_report_path(report), class: 'report__actions-item-link is-success' do
+          .thread__actions
+            ul.thread__actions-items
+              li.thread__actions-item
+                = link_to edit_report_path(report), class: 'thread__actions-item-link is-success' do
                   i.fa.fa-pencil
-              li.report__actions-item
-                = link_to new_report_path(id: report), class: 'report__actions-item-link is-success' do
+              li.thread__actions-item
+                = link_to new_report_path(id: report), class: 'thread__actions-item-link is-success' do
                   i.fa.fa-files-o
-              li.report__actions-item
-                = link_to report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'report__actions-item-link is-danger' do
+              li.thread__actions-item
+                = link_to report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread__actions-item-link is-danger' do
                   i.fa.fa-trash-o
         = link_to reports_path, class: 'is-button-standard-sm-secondary' do
           i.fa.fa-angle-left
           = t('to_index_of_reports')
-        - if admin_login? && @report.checks.blank?
-          = render 'reports/report_check_form'
 
-  = link_to report.user, itempro: "url", class: "report__author-link" do
-    = gravatar_tag report.user, secure: true, size: 120, html: { class: "report__author-icon" }
+  = link_to report.user, itempro: "url", class: "thread__author-link" do
+    = gravatar_tag report.user, secure: true, size: 120, html: { class: "thread__author-icon" }
