--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -21,6 +21,6 @@ nav.sort-nav
   .container
     = paginate @reports, position: "top"
     - if @reports.present?
-      .report-list
+      .thread-list
         = render partial: 'reports/report_list_item', collection: @reports, as: :report, locals: { search_words: @search_words }
     = paginate @reports, position: "bottom"
