--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,12 +1,12 @@
-.report-comment-form
-  .report-comment__author
-    = gravatar_tag current_user, secure: true, size: 200, html: { class: "report-comment__author-icon"}
-  = form_for [question, answer], html: {class: 'report-comment-form__form'} do |f|
+.thread-comment-form
+  .thread-comment__author
+    = gravatar_tag current_user, secure: true, size: 200, html: { class: "thread-comment__author-icon"}
+  = form_for [question, answer], html: {class: 'thread-comment-form__form'} do |f|
     - if answer.errors.any?
       = error_messages_for :answer
     .form-items
       .form-item
-        = f.text_area :description, class: 'a-textarea report-comment-form__textarea js-markdown'
-    .report-comment-form__action
+        = f.text_area :description, class: 'a-textarea thread-comment-form__textarea js-markdown'
+    .thread-comment-form__action
       = hidden_field_tag :return_to, params[:return_to].presence
       = f.submit t('post_comment'), class: 'is-button-standard-md-primary'
