--- a/app/views/products/comments/_comment.html.slim
+++ b/app/views/products/comments/_comment.html.slim
@@ -1,22 +1,22 @@
-.product-comment
-  .product-comment__author
-    = link_to comment.user, itempro: 'url', class: 'product-comment__author-link' do
-      = gravatar_tag comment.user, secure: true, size: 200, html: { class: "product-comment__author-icon"}
-  .product-comment__body
-    header.product-comment__body-header
-      h2.product-comment__login-name
-        = link_to comment.user, itempro: 'url', class: 'product-comment__login-name-link' do
+.thread-comment
+  .thread-comment__author
+    = link_to comment.user, itempro: 'url', class: 'thread-comment__author-link' do
+      = gravatar_tag comment.user, secure: true, size: 200, html: { class: "thread-comment__author-icon"}
+  .thread-comment__body
+    header.thread-comment__body-header
+      h2.thread-comment__login-name
+        = link_to comment.user, itempro: 'url', class: 'thread-comment__login-name-link' do
           = comment.user.login_name
-      time.product-comment__created-at(datetime='#{product.created_at.to_datetime}' pubdate='pubdate')
+      time.thread-comment__created-at(datetime='#{product.created_at.to_datetime}' pubdate='pubdate')
         = l comment.updated_at, format: :date_long_with_time
-    .product-comments__description.js-markdown-view.js-target-blank.is-long-text-style
+    .thread-comments__description.js-markdown-view.js-target-blank.is-long-text-style
       = comment.description
     - if comment.user == current_user
-      .product-comment__actions
-        ul.product-comment__actions-items
-          li.product-comment__actions-item
-            = link_to edit_practice_product_comment_path(product.practice, product, comment), class: 'product-comment__actions-item-link' do
+      .thread-comment__actions
+        ul.thread-comment__actions-items
+          li.thread-comment__actions-item
+            = link_to edit_practice_product_comment_path(product.practice, product, comment), class: 'thread-comment__actions-item-link' do
               i.fa.fa-pencil
-          li.product-comment__actions__item
-            = link_to  practice_product_comment_path(product.practice, product, comment), data: { confirm: t('are_you_sure') }, method: :delete, class: 'product-comment__actions-item-link' do
+          li.thread-comment__actions__item
+            = link_to  practice_product_comment_path(product.practice, product, comment), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-comment__actions-item-link' do
               i.fa.fa-trash-o
