--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -4,4 +4,12 @@ header.page-header
       h2.page-header__title 提出物を投稿する
 .page-body
   .container
+    .row
+      .col-md-6.col-xs-12
+        .practice-content
+          .practice-content__header
+            h2.practice-content__title= t('helpers.label.practice.goal')
+          .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
+            = @product.practice.goal
+
     = render "form", product: @product
