--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,19 +1,23 @@
-.question-list-item
-  .question-list-item__inner
-    .question-list-item__author
-      = gravatar_tag question.user, secure: true, size: 44, html: { class: "question-list-item__author-icon"}
-    header.question-list-item__header
-      h2.question-list-item__title(itemprop="name")
-        = link_to question, itempro: "url", class: "question-list-item__title-link" do
+.thread-list-item
+  .thread-list-item__inner
+    .thread-list-item__author
+      = gravatar_tag question.user, secure: true, size: 44, html: { class: "thread-list-item__author-icon"}
+    header.thread-list-item__header
+      h2.thread-list-item__title(itemprop="name")
+        = link_to question, itempro: "url", class: "thread-list-item__title-link" do
           = question.title
-      .question-list-item__actions
+      .thread-list-item__actions
         - if current_user == question.user
-          = link_to edit_question_path(question), class: 'question-list-item__actions-link' do
+          = link_to edit_question_path(question), class: 'thread-list-item__actions-link' do
             i.fa.fa-pencil
-          = link_to question_path(question), data: { confirm: t('are_you_sure') }, method: :delete, class: 'question-list-item__actions-link' do
+          = link_to question_path(question), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-list-item__actions-link' do
             i.fa.fa-trash-o
-    .question-list-item-meta
-      time.question-list-item-meta__updated-at(datetime="#{question.updated_at.to_datetime}" pubdate="pubdate")
+    .thread-list-item-meta
+      time.thread-list-item-meta__updated-at(datetime="#{question.updated_at.to_datetime}" pubdate="pubdate")
         = l question.updated_at, format: :semi_long
       - if question.answers.present?
-        .question-list-item__count 回答#{question.answers.count}個
+        .thread-list-item-meta__comment-count
+          .thread-list-item-meta__comment-count-label
+            i.fa.fa-comment-o
+          .thread-list-item-meta__comment-count-value
+            = question.answers.size
