日報のフォームに学習時間の項目を追加

--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -20,6 +20,13 @@
           .form-item
             = f.label :reported_at, class: "a-label"
             = f.text_field :reported_at, class: "datepicker a-text-input", value: Date.today.strftime("%Y-%m-%d")
+
+          #tasks
+            = f.fields_for :learning_times do |learning_time|
+              = render "learning_time_fields", f: learning_time
+            .links
+              = link_to_add_association "学習時間追加", f, :learning_times, class: 'is-button-standard-lg-warning'
+
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
