日報の学習時間の表示にデザイン

--- a/app/assets/stylesheets/blocks/shared/_alert.sass
+++ b/app/assets/stylesheets/blocks/shared/_alert.sass
@@ -5,6 +5,8 @@
     background-color: $danger
   &.is-info
     background-color: $info
+  &.is-hidden
+    display: none
 
 .alert__container
   +relative
@@ -13,7 +15,7 @@
   +text-block(.875rem 1.45, center $reversal-text)
 
 .alert__close
-  +position(absolute, left 0, top 50%)
+  +position(absolute, right 0, top 50%)
   +size(3rem)
   +text-block(1.5rem, $reversal-text center 600)
   margin-top: -1.5rem
