--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -30,10 +30,9 @@ $thread-header-author: 6rem
       content: none
 
 .thread__header
-  padding: 1rem 2rem
-  border-bottom: solid 1px $background-color
+  padding: 1rem 2rem 0
   +media-breakpoint-down(sm)
-    padding: 2.5rem 1rem .5rem 1rem
+    padding: 2.5rem 1rem .5rem
     .thread.is-page &
       padding-top: .75rem
 
