--- a/app/assets/stylesheets/blocks/report/_report-practices.sass
+++ b/app/assets/stylesheets/blocks/report/_report-practices.sass
@@ -1,7 +1,8 @@
 .report-practices
-  padding: 1.25rem 2rem 0
+  padding: .75rem 2rem
+  border-bottom: dashed 1px $background-color
   +media-breakpoint-down(sm)
-    padding: 1rem 1rem 0
+    padding: .5rem 1rem
 
 .report-practices__items
   display: flex
