--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -25,25 +25,25 @@
               = link_to practice, class: 'report-practices__item-link' do
                 = practice.title
 
-    .learning-times
-      h2.learning-times__title
-        | 学習時間:
-        span.learning-times__total-time
-          | #{report.total_time}時間
+    - if report.learning_times.present?
+      .learning-times
+        h2.learning-times__title
+          | 学習時間:
+          span.learning-times__total-time
+            | #{report.total_time}時間
 
-      ul.learning-times__items
-        - report.learning_times.each do |learning_time|
-          li.learning-times__item
-            | #{l learning_time.started_at, format: :time} 〜 #{l learning_time.finished_at, format: :time}
+          ul.learning-times__items
+            - report.learning_times.each do |learning_time|
+              li.learning-times__item
+                | #{l learning_time.started_at, format: :time} 〜 #{l learning_time.finished_at, format: :time}
 
     .thread__description.js-target-blank.is-long-text-style.js-markdown-view
       = report.description
-    - if admin_login?
+    - if admin_login? && @report.checks.blank?
       .thread-admin-tools
         ul.thread-admin-tools__items
-          - if @report.checks.blank?
-            li.thread-admin-tools__item
-              = render 'reports/report_check_form'
+          li.thread-admin-tools__item
+            = render 'reports/report_check_form'
 
     footer.thread__body-footer
       .thread__body-footer-container
