importしてるjsのurlを修正

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html.is-application lang="ja"
   - page_classes = content_for(:page_classes).to_s
   head
-    = render "google_tag_manager_head"
+    //= render "google_tag_manager_head"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     = display_meta_tags default_meta_tags
     = javascript_include_tag 'application'
@@ -20,10 +20,10 @@ html.is-application lang="ja"
       = stylesheet_link_tag 'application', media: 'all'
       = stylesheet_link_tag "//cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
       = render "import_prism"
-    = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all'
+    = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', media: 'all'
     = content_for(:head_last) if content_for?(:head_last)
   body#body class="#{body_class} #{page_classes}"
-    = render "google_tag_manager_body"
+    //= render "google_tag_manager_body"
     - if current_user && page_classes.exclude?("no-global-nav")
         = render "global_nav"
     .wrapper.js-open-drawer-wrapper
